VC-2291 Fixed control display logic and z-index

--- a/public/sources/less/states/common.less
+++ b/public/sources/less/states/common.less
@@ -67,34 +67,37 @@ body.vcwb-editor-body.vcwb-editor--opacity {
 }
 
 // Control styling for editor page title
-.vcv-title-control {
-  display: none;
-  position: absolute;
-  top: -30px;
-  left: 15px;
-  width: 32px;
-  height: 32px;
-  background-color: #6dab3c;
-  color: white;
-  border-radius: 5px;
-  font-size: 13px;
-  cursor: pointer;
-
-  &--active {
-    display: block;
-  }
-
-  &:hover {
-    background-color: #5c9133;
-  }
-
-  i {
+.entry-title {
+  .vcv-title-control {
+    visibility: hidden;
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    &::before {
-      font-size: 1.25em;
+    z-index: 100;
+    top: -30px;
+    left: 15px;
+    width: 32px;
+    height: 32px;
+    background-color: #6dab3c;
+    color: white;
+    border-radius: 5px;
+    font-size: 13px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #5c9133;
     }
+
+    i {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      &::before {
+        font-size: 1.25em;
+      }
+    }
+  }
+
+  &:hover .vcv-title-control {
+    visibility: visible;
   }
 }
